# emt-window

./: .clang-format  .gitignore  CMakeLists.txt  README.md  update-git.cmd
ref/: frameless.cpp
srcs/emt/core/: emt_core.h  typedef.h
srcs/emt/window/: CMakeLists.txt  application.cpp  application.h  control.cpp  control.h  d2d.cpp  d2d.h  gdi.cpp  gdi.h  gdi_plus.h  painter.cpp  painter.h  wnd.cpp  wnd.h  wnd_config.h
srcs/emt/window/gui/: window.cpp  window.h
srcs/example/: CMakeLists.txt  example.cpp
sub/: 2025-08-21-list.md
